clusters/managed/multimedia/stirling-pdf/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: stirling-pdf-ingressroute
  namespace: mgd-multimedia
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Tools
    gethomepage.dev/name: Stirling PDF
    gethomepage.dev/description: "PDF processing and editing"
    gethomepage.dev/icon: mdi-file-pdf-box
    gethomepage.dev/href: "https://pdf.trusted.nirmalhk7.com"
    gethomepage.dev/weight: "10"
    gethomepage.dev/pod-selector: "app=stirling-pdf"
spec:
  entryPoints:
    - websecure
    - web
  routes:
    - match: Host(`pdf.trusted.nirmalhk7.com`)
      kind: Rule
      middlewares:
        - name: mgd-ratelimit
        - name: mgd-headervalidation
      services:
        - name: stirling-pdf
          port: 8080
